# ptztrack_ue5

./: .env.example  .gitignore  FocalLength.json  README.md  batch.json  main.py  multithreaded_push.py  pyproject.toml  requirements.txt  rotation.json  sample.env
backend/: connector.py  main_worker.py
frontend/: choiseScene.qml  controllers.py  main.qml  widgets.py  windows.py
frontend/styles/: main.qss
jsons/: default_scene.json
ptztrack_ue5/: main.py  server.py
ptztrack_ue5/backend/: connector.py  core.py  json_settings.py  main_worker.py
ptztrack_ue5/configs/: backend.py  variables.py
ptztrack_ue5/frontend/: addCamera.qml  addScene.qml
ptztrack_ue5/schemas/: control.py
tests/: conftest.py  test_backend.py  test_core.py
