[tool.poetry]
name = "ptztrack-ue5"
version = "0.1.0"
description = "Using onvif-based ptz cameras for virtual production in Unreal Engine 5"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ptztrack_ue5"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
httpx = "^0.24.0"
pyside6 = "^6.5.0"
python-dotenv = "^1.0.0"
onvif-zeep-async = "^3.1.7"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
